# s3e

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NL_state_est_LLaVA.ipynb  PDDL_to_NL_queries.ipynb  README.md  domain.pddl  full_pipeline.ipynb  full_pipeline_CLIP.ipynb  full_res-HOME.ipynb  full_res.ipynb  full_res_GRIP.ipynb  full_res_PRB.ipynb  full_res_ROBOT.ipynb  get_all_states.py  get_queries.py  hf_dl.sh  install_flash-attn.sh  jupyter-lab.sh  llama_utils.py  llava-next-ROBOT.ipynb  llava-next-pipeline.ipynb  llava-next.ipynb  llava_next_utils.py  llava_utils.py  mc_results.ipynb  misc.py  pddl2nl_query_converter.py  prcessed_res.ipynb  problem.pddl  pyproject.toml  pytest.ini  queries_slurm.sh  requirements.txt  robot_exp.ipynb  run_llava_with_system.py  runit.sh  semantic_state_estimator.py  stam_collect_pddl.py  (+4 more)
docs/: s3e_walkthrough.ipynb
examples/apt0_body_state/: domain.pddl  problem.pddl
examples/blocksworld/: bw_data_collector.py  bw_env.py  bw_gt_state_estimator.py  bw_skill_executer.py  dcollect.sh  domain.pddl  dprocess.sh  problem.pddl
examples/bw_grip/: bw_data_collector.py  bw_gt_state_estimator.py  bw_skill_executer.py  dcollect.sh  dprocess_default.sh
examples/bw_grip_home/: bw_data_collector.py  bw_env.py  dprocess_iter.sh
examples/drop_can/: dprocess_72.sh  problem.pddl
examples/groceriesworld/: domain.pddl  dprocess.sh  gw_data_collector.py  gw_env.py  gw_process_milk.py  gw_skill_executer.py  problem.pddl
examples/groceriesworld_home/: dcollect.sh  dprocess-milk.sh  dprocess.sh  dprocess_iter_milk_72.sh  gw_data_collector.py  gw_gt_state_estimator.py  gw_process_milk.py
examples/gw_grip/: dcollect.sh  dprocess_iter05.sh  dprocess_iter_72.sh  dprocess_iter_72_instruct.sh  dprocess_iter_7B_instruct.sh  dprocess_iter_abl_05.sh  dprocess_iter_abl_05_instruct.sh  dprocess_iter_abl_72_instruct.sh  dprocess_iter_abl_7_instruct.sh  dprocess_iter_instruct.sh  dprocess_iter_milk.sh  dprocess_iter_milk_72.sh  dprocess_sft_sep_instruct_milk.sh  gw_data_collector.py  gw_skill_executer.py  problem.pddl
examples/gw_grip_home/: dcollect.sh  dprocess_iter_05B_instruct.sh  dprocess_iter_72.sh  dprocess_iter_abl_72.sh  dprocess_iter_abl_72_instruct.sh  dprocess_iter_grip_and_milk72.sh  dprocess_iter_instruct.sh  dprocess_iter_milk_72.sh  dprocess_sft_sep.sh  dprocess_sft_sep_instruct.sh  gw_env.py  gw_episode_runner.py  problem.pddl  run_all_gt_and_noisy.sh  run_episode_gpt41_full_inst.sh  run_episode_gpt41_full_inst_allview_inst.sh  run_episode_gpt41_full_inst_sideviews.sh  run_episode_gpt41_full_inst_view_inst.sh  run_episode_gpt4o.sh  run_episode_gpt4o_inst_milk_bread_tables.sh  run_episode_gpt4o_inst_milk_bread_tables_gripper.sh  run_episode_gpt4o_inst_milk_bread_tables_gripper_views.sh  run_episode_gpt4o_multirun.sh  run_episode_gt.sh  (+5 more)
s3e/: __init__.py  cache.py  calibration.py  constants.py  semantic_state_estimator.py  state_estimator.py
semantic_state_estimator/: constants.py  random_state_estimator.py  semantic_state_estimator.py  skill_executer.py  state_estimator.py
tests/: conftest.py  test_cache.py  test_calibration.py  test_pddl_utils.py  test_semantic_state_estimator.py  test_translators.py  test_vlm_backends.py
(+75 files in other folders)
