[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]  # defines all the package metadata
dynamic = ["dependencies"]  # metadata to be read from a file or the package itself (see [tool.setuptools.dynamic])
name = "s3e"
version = "0.0.0"
authors = [
    { name = "Guy Azran", email = "guy.azran@campus.technion.ac.il" },
]
description = "A package that uses SOTA language multimodal models as state estimators for task and motion planning"
keywords = ["Foundation Models", "Artificial Intelligence", "Task and Motion Planning"]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/my-account/bench3d"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ['semantic_state_estimator']
