[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s3e"
version = "0.1.0"
authors = [
    { name = "Guy Azran", email = "guy.azran@campus.technion.ac.il" },
]
description = "Vision-language models as state estimators for PDDL-based planning"
keywords = ["Foundation Models", "Artificial Intelligence", "Task and Motion Planning", "PDDL", "State Estimation"]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
license = { file = "LICENSE.txt" }
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "accelerate",
    "unified-planning",
    "numpy",
    "tqdm",
    "Pillow",
]

[project.optional-dependencies]
openai = ["openai"]
calibration = ["scikit-learn"]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/CLAIR-LAB-TECHNION/s3e"

[tool.setuptools.packages.find]
include = ["s3e*"]
